generacion de imagen

--- a/templates/index.html
+++ b/templates/index.html
@@ -207,6 +207,15 @@
                             <button type="button" class="btn btn-outline-light btn-sm" id="regenerateBtn">
                                 <i class="bi bi-arrow-repeat me-1"></i>Regenerar
                             </button>
+                            <!-- Botón para generar imagen -->
+                            <button type="button" class="btn btn-outline-success btn-sm ms-2" id="generateImageBtn">
+                                <i class="bi bi-image me-1"></i>Generar Imagen
+                            </button>
+                        </div>
+                        <!-- Contenedor para mostrar la imagen generada -->
+                        <div id="imageContainer" class="mt-4" style="display:none;">
+                            <h6 class="text-white mb-2"><i class="bi bi-image me-2"></i>Ilustración generada</h6>
+                            <img id="generatedImage" src="" alt="Imagen generada" class="img-fluid rounded shadow" style="max-width:100%;border:2px solid #fff;">
                         </div>
                     </div>
                 </div>
